Added health checks for the API and the DB
